[GStreamer] [GTK] WebKit does not build with GStreamer 1.4 https://bugs.webkit.org/show_bug.cgi?id=135114

.:
Fix build with GStreamer 1.4

Patch by Adrian Perez de Castro <aperez@igalia.com> on 2014-07-22
Reviewed by Philippe Normand.

* Source/cmake/FindGStreamer.cmake: Check version 1.4.0 for the
gst-mpegts component instead of the unstable 1.3.x verstions.

Source/WebCore:
Patch by Adrian Perez de Castro <aperez@igalia.com> on 2014-07-22
Reviewed by Philippe Normand.

Fix build with GStreamer 1.4

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
Change GstMpegTs-prefixed types to use the GstMpegts prefix.
(WebCore::MediaPlayerPrivateGStreamer::handleMessage):
(WebCore::MediaPlayerPrivateGStreamer::processMpegTsSection):
* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h:
Ditto.

Canonical link: https://commits.webkit.org/153054@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171339 268f45cc-cd09-0410-ab3c-d52691b4dbfc